--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-VITE_RENDER_URL = "https://fd-recall.onrender.com"
+# VITE_RENDER_URL = "https://fd-recall.onrender.com"
+ 
+VITE_RENDER_URL="http://localhost:8000"
